# goggles-filter-chain

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .semgrep.yml  .semgrepignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  lsan.supp  pixi.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
assets/diagnostics/authoring_corpus/invalid_compile/: broken_shader.slang  broken_shader.slangp
assets/diagnostics/authoring_corpus/invalid_parse/: malformed.slangp
assets/diagnostics/authoring_corpus/reflection_loss/: reflectionless.slang  reflectionless.slangp
assets/diagnostics/authoring_corpus/valid/: pass_through.slang  pass_through.slangp
assets/diagnostics/semantic_probes/: frame_counter_probe.slang  frame_counter_probe.slangp  parameter_isolation_probe.slang  parameter_isolation_probe.slangp  size_probe.slang  size_probe.slangp
assets/shaders/internal/: blit.frag.slang  blit.vert.slang  downsample.frag.slang
cmake/: CodeQuality.cmake  CompilerConfig.cmake  EmbedAssets.cmake  FilterChainDependencies.cmake  GogglesFilterChainConfig.cmake.in  SharedRuntime.cmake
common/: CMakeLists.txt
common/include/goggles/: error.hpp  profiling.hpp
docs/: diagnostics-guide.md
include/: goggles_filter_chain.h
include/goggles/: filter_chain.h  filter_chain.hpp
include/goggles/filter_chain/: api.hpp  common.hpp  error.hpp  filter_controls.hpp  result.hpp  scale_mode.hpp  vulkan_context.hpp
scripts/: validate-installed-consumers.sh
scripts/task/: build.sh  format-check.sh  format.sh  parse-preset.sh  shader-fetch.sh  static-analysis.sh  test.sh  update-golden.sh
src/api/: abi_validation.hpp  c_api.cpp  cpp_wrapper.cpp  internal_diagnostic_policy.hpp
src/capture/: renderdoc_bridge.cpp  renderdoc_bridge.hpp  runtime_capture.cpp  runtime_capture.hpp
src/chain/: chain_builder.cpp  chain_builder.hpp  chain_controls.cpp  chain_controls.hpp  chain_executor.cpp  chain_executor.hpp  chain_resources.cpp  chain_resources.hpp  chain_runtime.cpp  chain_runtime.hpp  debug_label_scope.hpp  downsample_pass.cpp  downsample_pass.hpp  filter_controls.cpp  filter_pass.cpp  filter_pass.hpp  frame_history.cpp  frame_history.hpp  framebuffer.cpp  framebuffer.hpp  output_pass.cpp  output_pass.hpp  pass.hpp  preset_parser.cpp  preset_parser.hpp  semantic_binder.hpp  vulkan_result.hpp
src/diagnostics/: binding_ledger.hpp  chain_manifest.hpp  compile_report.hpp  degradation_ledger.hpp  diagnostic_event.hpp  diagnostic_policy.hpp  diagnostic_report.hpp  diagnostic_report_json.cpp  diagnostic_report_json.hpp  diagnostic_session.cpp  diagnostic_session.hpp  diagnostic_sink.hpp  execution_timeline.hpp  forensic.hpp  gpu_timestamp_pool.cpp  gpu_timestamp_pool.hpp  json_writer.hpp  log_sink.cpp  log_sink.hpp  semantic_ledger.hpp  session_identity.hpp  source_provenance.hpp  test_harness_sink.cpp  test_harness_sink.hpp
src/runtime/: chain.cpp  chain.hpp  device.cpp  device.hpp  embedded_assets.hpp  instance.cpp  instance.hpp  program.cpp  program.hpp  source_resolver.cpp  source_resolver.hpp
src/shader/: retroarch_preprocessor.cpp  retroarch_preprocessor.hpp  shader_runtime.cpp  shader_runtime.hpp  slang_reflect.cpp  slang_reflect.hpp
src/texture/: stb_image_impl.cpp  stb_image_write_impl.cpp  texture_loader.cpp  texture_loader.hpp
src/util/: logging.cpp  logging.hpp  serializer.hpp
tests/: CMakeLists.txt
tests/consumer/c_api/: CMakeLists.txt  main.c
tests/consumer/shared/: CMakeLists.txt  main.cpp
tests/consumer/static/: CMakeLists.txt  main.cpp
tests/contract/: runtime_diagnostics_test_support.hpp  shader_batch_report.cpp  shader_batch_report.hpp  shader_batch_report_main.cpp  test_authoring_validation.cpp  test_binding_ledger.cpp  test_compile_report.cpp  test_diagnostic_event_model.cpp  test_diagnostic_ledgers.cpp  test_diagnostic_report_json.cpp  test_diagnostic_reporting.cpp  test_diagnostic_session.cpp  test_diagnostic_sinks.cpp  test_filter_chain.cpp  test_filter_chain_c_api_contracts.cpp  test_filter_controls.cpp  test_gpu_timestamp_pool.cpp  test_json_writer.cpp  test_preset_parser.cpp  test_retroarch_preprocessor.cpp  test_runtime_diagnostics_internal.cpp  test_runtime_diagnostics_public.cpp  test_semantic_binder.cpp  test_shader_batch_report.cpp  test_shader_runtime.cpp  test_shader_validation.cpp  test_slang_reflect.cpp  test_source_provenance.cpp  test_zfast_integration.cpp
tests/golden/: README.md
tests/visual/: CMakeLists.txt  generate_test_pattern.cpp  image_compare.cpp  image_compare.hpp  runtime_capture.cpp  runtime_capture.hpp  runtime_capture_main.cpp  stb_image_impl.cpp  stb_image_write_impl.cpp  test_capture_all_passes.cpp  test_semantic_probes.cpp  test_temporal_golden.cpp  test_upstream_golden.cpp
tools/cli/: CMakeLists.txt  cmd_assert.cpp  cmd_assert.hpp  cmd_capture.cpp  cmd_capture.hpp  cmd_diagnose.cpp  cmd_diagnose.hpp  cmd_validate.cpp  cmd_validate.hpp  image_io.cpp  image_io.hpp  main.cpp  stb_image_write_impl.cpp  subcommand.hpp  vulkan_backend.cpp  vulkan_backend.hpp
